--- a/styles.css
+++ b/styles.css
@@ -87,5 +87,24 @@ display: flex;
     transform: translate(0, -50%); /* Subtract half of the width of the fretmark to center */
 }
 
-
+.double-fretmark:before {
+    content: "";
+    position: absolute;
+    height: 20px;
+    width: 20px;
+    border-radius: 50%;
+    top: 58px;
+    background: blue;
+    transform: translate(-140%, 50%);
+    }
+.double-fretmark:after {
+    content: "";
+    position: absolute;
+    height: 20px;
+    width: 20px;
+    border-radius: 50%;
+    top: 208px;
+    background: red;
+    transform: translate(-140%, 50%);
+}
 
