--- a/styles.css
+++ b/styles.css
@@ -1,16 +1,17 @@
 :root {
     /* Set up variables one by one and change accordingly in css below  */
-    --fretboard-height: 450; /* So we can calculate string spacing and fret marks */
+    --fretboard-height: 300; /* So we can calculate string spacing and fret marks */
     --number-of-strings: 6;
     --string-height: 10;
     --half-string-height: calc(var(--string-height) / 2);
+    --fret-mark-color: #806233;
     /* Explain this calculation */
     --string-top-position: calc(((var(--fretboard-height) / var(--number-of-strings) / 2) - var(--half-string-height)) * 1px);
-    --double-fret-mark-pos-1: calc(var(--fretboard-height) / 5);
-    --double-fret-mark-pos-2: calc(var(--double-fret-mark-pos-1) + var(--fretboard-height) / 2);
+    --double-fret-mark-pos-1: calc(var(--fretboard-height) * 0.25px);
+    --double-fret-mark-pos-2: calc(var(--fretboard-height) * 0.75px);
 }
 
-/* Import Lato font */
+/* Import Lato font ..*/
 @import url('https://fonts.googleapis.com/css?family=Lato:100,300,400');
 /* Reset */
 * {
@@ -96,7 +97,7 @@ display: flex;
     width: 20px;
     border-radius: 50%;
     top: calc(var(--fretboard-height) / 2 * 1px); /*  50 percent of the height of the fretboard */ /* Multiply with 1 px to get unit */
-    background: #806233;
+    background: var(--fret-mark-color);
     transform: translate(0, -50%); /* Subtract half of the width of the fretmark to center */
 }
 
@@ -106,11 +107,12 @@ display: flex;
     height: 20px;
     width: 20px;
     border-radius: 50%;
+    background: var(--fret-mark-color);
     /* Extract to make it simpler */
     /* top: calc(calc(var(--fretboard-height) / 5) * 1px);  */
-    top: calc(var(--double-fret-mark-pos-1) * 1px);
-    background: #80623d;
-    transform: translate(-140%, 50%);
+    top: calc(var(--double-fret-mark-pos-1));
+    transform: translate(-140%, -50%);
+    
 }
 .double-fretmark:after {
     content: "";
@@ -118,9 +120,8 @@ display: flex;
     height: 20px;
     width: 20px;
     border-radius: 50%;
-    /* top: calc(calc(var(--fretboard-height) / 5 + calc(var(--fretboard-height) / 2)) * 1px); Multiply with 1 px to get unit */
-    top: calc(var(--double-fret-mark-pos-2) * 1px);
-    background: #80623e;
-    transform: translate(-140%, 50%);
+    background: var(--fret-mark-color);
+    top: var(--double-fret-mark-pos-2);
+    transform: translate(-140%, -50%);
 }
 
