--- a/styles.css
+++ b/styles.css
@@ -9,6 +9,7 @@
     --string-top-position: calc(((var(--fretboard-height) / var(--number-of-strings) / 2) - var(--half-string-height)) * 1px);
     --double-fret-mark-pos-1: calc(var(--fretboard-height) * 0.25px);
     --double-fret-mark-pos-2: calc(var(--fretboard-height) * 0.75px);
+    --noteDotOpacity: 0;
 }
 
 /* Import Lato font ..*/
@@ -86,7 +87,7 @@ display: flex;
 
 /* Note dots to display note names ******* MOVED THIS UNDER fretmark>before and after styles, so the note dots will still display correctly*/
 .note-fret:before {
-  content: 'C'; /* Replace with data attribute later */
+  content: attr(data-note); /* Replace with data attribute later */
   width: 33px;
   height: 33px;
   border-radius: 50%;
@@ -96,7 +97,7 @@ display: flex;
   border: 3px solid #007575;
   color: #eee;
   z-index: 2;
-  opacity: 0.2;
+  opacity: var(--noteDotOpacity);
 }
 
 /* REMOVED OLD STYLES */
