--- a/styles.css
+++ b/styles.css
@@ -24,6 +24,13 @@ body {
     background: #333536;
     font-family: Lato, sans-serif;
 }
+/* Add styling to settings */
+.settings {
+  color: #fff;
+  padding: 20px;
+  border-bottom: 1px solid #444;
+  background: #282828;
+}
 
 .fretboard {
     display: flex;
