--- a/styles.css
+++ b/styles.css
@@ -137,3 +137,18 @@ display: flex;
     transform: translate(-140%, -50%);
 }
 
+.note-name-section {
+  width: 100%;
+  color: #fff;
+  font-weight: 100;
+  font-size: 2.5em;
+  display: flex;
+  justify-content: center;
+}
+.note-name-section span {
+  padding: 10px;
+  cursor: pointer;
+}
+.note-name-section span:hover {
+  color: #00baba;
+}
